added all event crud methods and views. No styling. Updated footer for easier development

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit event</h1>
 
-<% render "event_form" %>
+<%= render "event_form" %>
 
-<% render "shared/footer" %>
+<%= render "shared/footer" %>
