--- a/app/views/events/_event_form.html.erb
+++ b/app/views/events/_event_form.html.erb
@@ -3,15 +3,9 @@
   <%= f.input :location %>
   <%= f.input :time, as: :datetime %>
   <%= f.input :description %>
-  <%= f.submit "Create Event" %>
+  <% if current_page?(new_event_path) %>
+    <%= f.submit "Create Event" %>
+  <% else %>
+    <%= f.submit "Update Event" %>
+  <% end %>
 <% end %>
-
-<%# create_table "events", force: :cascade do |t|
-    t.time "time"
-    t.string "location"
-    t.string "title"
-    t.text "description"
-    t.bigint "user_id", null: false
-    t.datetime "created_at", precision: 6, null: false
-    t.datetime "updated_at", precision: 6, null: false
-    t.index ["user_id"], name: "index_events_on_user_id" %>
