--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,9 @@
 <h1>footer</h1>
+<% if user_signed_in? %>
+  <p>You are currently logged in as: <%= current_user.email %></p>
+<% else %>
+  <p>You not logged</p>
+<% end %>
 <%= link_to "Log in", new_user_session_path %>
 <%= link_to "register", new_user_registration_path %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
