--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,8 +4,11 @@
 <% else %>
   <p>You not logged</p>
 <% end %>
+<%= link_to "Home", root_path %>
+<%#= link_to "Dashboard", dashboard_path %>
 <%= link_to "Log in", new_user_session_path %>
 <%= link_to "register", new_user_registration_path %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete %>
 <%= link_to "Create Event", new_event_path %>
+<%= link_to "Show an Event", event_path(Event.first) %>
 
