--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @event.title %></h1>
 <h2><%= @event.location %></h2>
-<p><%= @event.time %></p>
+<p><%= @event.datetime %></p>
 
 <p><%= @event.description %></p>
 
