--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
   <%= link_to "Log out", destroy_user_session_path, method: :delete %>
   <%= link_to "Dashboard", dashboard_index_path %>
   <%= link_to "Create Event", new_event_path %>
-  <%= link_to "Show an Event", event_path(Event.first) %>
+  <%= link_to "Show an Event", event_path(Event.all.sample) %>
 <% else %>
   <p>You not logged</p>
   <%= link_to "Log in", new_user_session_path %>
