added invitations to dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-  <h1>USER DASHBOARD</h1>
+  <h1>MY EVENTS CALENDAR</h1>
   <div class="host-section">
-    <h2><strong>EVENTS AS HOST</strong></h2>
     <hr>
     <% @all_events_sorted.each do |event| %>
       <div class="event-card">
