added javascript animation - not integrated yet

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,8 @@
     </div>
 </div>
 
-<div style="background-color:#E8DDB5; width:50%; height:50%; float:right">
+<div id="drawing-area" style="background-color:#E8DDB5; width:50%; height:50%; float:right">
+    <%= javascript_pack_tag 'script.js' %>
 </div>
 
 <div style="background-color:#E8DDB5; width:50%; height:50%; float:left">
