--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <%= "#{@user.first_name} #{@user.last_name}"%>
 <%= @user.email %>
 <%= @user.phone_number %>
-<%= link_to "Edit", edit_user_path, class: "btn offer-card-button"%>
+<%= link_to "Edit", edit_user_path, class: "button-main"%>
+
+
