added colour variables and page for dashboard styles

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>MY EVENTS CALENDAR</h1>
+  <h1>Dashboard</h1>
   <div class="host-section">
     <hr>
     <% @all_events_sorted.each do |event| %>
