--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -15,13 +15,13 @@ a.button-main {
     }
 }
 
-a.button-create {
+.button-create {
     background-color:black;
     cursor: pointer;
     font-weight: bold;
     color:white;
     text-decoration:none;
-    padding: 15px 30px 15px 30px;
+    padding: 10px 30px 10px 30px;
     border: 1.5px solid black;
     border-radius:3px;
     text-decoration: none;
