--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -57,3 +57,50 @@ html,body {
     height:100%;
     min-height:100%;
   }
+
+ div.launch-form {
+   padding-top: 150px;
+   padding-bottom: 150px;
+   background-image: image-url('circlehome.png');
+   background-position: center;
+   background-repeat: no-repeat;
+   text-align: center;
+   align-content: center;
+   align-items: center;
+   justify-content: center;
+   display: inline-flex;
+   width: 100vw;
+ }
+
+ div.field {
+  width:400px;
+  margin-left: 200px;
+  margin-right: 200px;
+  padding: 10px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.button-create-home {
+  background-color:black;
+  cursor: pointer;
+  font-weight: bold;
+  color:white;
+  text-decoration:none;
+  padding: 10px 30px 10px 30px;
+  border: 1.5px solid black;
+  border-radius:3px;
+  text-decoration: none;
+   &:hover {
+    text-decoration: none;
+    background-color:#AB99FB;
+    color: white;
+  }
+}
+
+#launch {
+  background-image: image-url('banner2.jpg');
+  background-size: cover;
+
+}
