--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,14 +1,15 @@
-<h1>footer</h1>
-<% if user_signed_in? %>
-  <p>You are currently logged in as: <%= current_user.email %></p>
-  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-  <%= link_to "Dashboard", dashboard_index_path %>
-  <%= link_to "Create Event", new_event_path %>
-  <%= link_to "Show an Event", event_path(Event.all.sample) %>
-<% else %>
-  <p>You not logged</p>
-  <%= link_to "Log in", new_user_session_path %>
-  <%= link_to "register", new_user_registration_path %>
-<% end %>
-<%= link_to "Home", root_path %>
-
+<div class="footer"
+  <h1>footer</h1>
+  <% if user_signed_in? %>
+    <p>You are currently logged in as: <%= current_user.email %></p>
+    <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+    <%= link_to "Dashboard", dashboard_index_path %>
+    <%= link_to "Create Event", new_event_path %>
+    <%= link_to "Show an Event", event_path(Event.all.sample) %>
+  <% else %>
+    <p>You not logged</p>
+    <%= link_to "Log in", new_user_session_path %>
+    <%= link_to "register", new_user_registration_path %>
+  <% end %>
+  <%= link_to "Home", root_path %>
+</div>
