--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "prep-logo.png" %>
+    <%= image_tag "logo_host.it.svg" %>
   <% end %>
 
   <div class="nav-form">
