Added banner upload styling, added datetimepicker with flatpickr

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,4 +1,4 @@
-a.button-main {
+.button-main {
     background-color:#AB99FB;
     cursor: pointer;
     font-weight: bold;
@@ -15,7 +15,7 @@ a.button-main {
     }
 }
 
-a.button-create {
+.button-create {
     background-color:black;
     cursor: pointer;
     font-weight: bold;
@@ -32,7 +32,7 @@ a.button-create {
     }
 }
 
-a.button-invite {
+.button-invite {
     background-color:#DD1155;
     cursor: pointer;
     font-weight: bold;
