--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -1,4 +1,8 @@
 .event-banner {
   height: 500px;
   background-size: cover;
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
