--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,6 +8,8 @@
     <%= f.input :email %>
     <%= f.input :phone_number %>
     <%= f.input :avatar, as: :file, label: "Add a profile picture" %>
+     <%= f.button :submit, 'Submit' %>
     <%= link_to "Confirm changes", user_path(@user), method: :patch, data: { confirm: "Confrim changes?" }, class: 'button-main' %>
+    
   <% end %>
 </div>
