--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div id="drawing-area" style="background-color:#E8DDB5; width:50%; height:50%; float:right">
-    <%= javascript_pack_tag 'script.js' %>
+    <%= content_tag(:iframe,'', width: 720, height: 395, src: "https://random-placement-26.superhi.com/") %>
 </div>
 
 <div style="background-color:#E8DDB5; width:50%; height:50%; float:left">
