--- a/app/assets/stylesheets/events/_edit.scss
+++ b/app/assets/stylesheets/events/_edit.scss
@@ -23,6 +23,11 @@
     margin: 80px 0;
     flex-direction: column;
     align-items: center;
+    
+    .form-control {
+      border-radius: 0;
+      border: 1.5px solid black;
+    }
 
     .form-group {
       margin-bottom: 0;
