--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,35 +1,36 @@
-<div class="headline">
-  <h1>Dashboard</h1>
-</div>
 <div class="dashboard-container">
+  <div class="headline">
+    <h1>Dashboard</h1>
+  </div>
   <% @created_ats.each do |day| %>
-    <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
     <div class="event-card-section">
-    <% day[1].each do |day_event| %>
-      <div class="event-card">
-        <div class="event-card-header"><p><%= link_to "#{day_event.title}", event_path(day_event.id) %></p>
-          <% if day_event.user == current_user %>
-            <div class="event-card-status-circle-host"></div>
-          <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
-            <div class="event-card-status-circle-guest"></div>
-          <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
-            <div class="event-card-status-circle-invitation"></div>
+    <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
+      <% day[1].each do |day_event| %>
+        <div class="event-card">
+          <div class="event-card-header"><p><%= link_to "#{day_event.title}", event_path(day_event.id) %></p>
+            <% if day_event.user == current_user %>
+              <div class="event-card-status-circle-host"></div>
+            <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
+              <div class="event-card-status-circle-guest"></div>
+            <% elsif @invitations_data.include?([day_event.id, "pending"]) %>
+              <div class="event-card-status-circle-invitation"></div>
+            <% end %>
+          </div>
+          <% if day_event.banner.attached? %>
+            <div class="event-card-body" style="background-image: url('<%= cl_image_path day_event.banner.key, crop: :fill %>')">
+            <% else %>
+              <div class="event-card-body" style="background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDV8fHBhdHRlcm4lMjBkYXJrfGVufDB8fDB8&auto=format&fit=crop&w=800&q=60)">
           <% end %>
+            <p><i class="far fa-clock"></i> <%= day_event.scheduled_at.strftime("%l:%M %p") %></p>
+            <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
+            <p><i class="fas fa-info"></i> <%= day_event.description %></p>
+          </div>
         </div>
-        <div class="event-card-body">
-          <p><i class="far fa-clock"></i><%= day_event.scheduled_at.strftime("%l:%M %p") %></p>
-          <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
-          <p><i class="fas fa-info"></i><%= day_event.description %></p>
-        </div>
-      </div>
     <% end %>
     </div>
   <% end %>
 </div>
 <%= render "shared/footer" %>
-
-
-
 
 
 
