--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 #headers {
     margin-left: 60px;
-    padding-top: 100px;
+    padding-top: 200px;
 }
 
 h1 {
@@ -19,6 +19,14 @@ h2 {
     padding-top: 40px;
     padding-left: 60px;
 }
+
+#button-area {
+  margin-left:0;
+  background-image: image-url('background-buttons.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 
 #banner {
     background-image: image-url('homepage_banner.jpg')
@@ -39,7 +47,7 @@ div.column {
     padding: 5px;
     flex-direction: column;
     align-items: center;
-    text-align: center;;
+    text-align: center;
   }
 
   div.textblock {
@@ -57,6 +65,13 @@ html,body {
     height:100%;
     min-height:100%;
   }
+
+div#content iframe {
+    position: absolute;
+    width:50%; 
+    height:50%; 
+    float:right
+}
 
  div.launch-form {
    padding-top: 150px;
