--- a/app/views/events/_event_form.html.erb
+++ b/app/views/events/_event_form.html.erb
@@ -2,7 +2,7 @@
   <%= simple_form_for @event do |f| %>
   <div class="event-banner">
     <%= f.input :banner, as: :file, label: false, input_html: { hidden: true, class: "real-upload" } %>
-    <div class="button-create" id="upload-button">
+    <div class="button-create upload-button" id="upload-button">
     Upload Banner
     </div>
   </div>
