--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,18 +1,29 @@
-<% if @event.banner.attached? %>
-  <%#= cl_image_path @event.banner.key %>  
-  <div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @event.banner.key %>')"> 
+<div class="event-container">
+  <% if @event.banner.attached? %>
+    <div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @event.banner.key %>')"> 
   </div>
-<% else %>
-  UPLOAD BANNER
-<% end %>
+  <% else %>
+    <div class="event-banner">
+      <%= link_to "Add banner", edit_event_path(@event), class: "button-create upload-button" %>
+    </div>
+  <% end %>
 
-<h1><%= @event.title %></h1>
-<h2><%= @event.location %></h2>
-<p><%= @event.scheduled_at %></p>
+  <div class="event-details">
+    <% if @event.user == current_user || current_user.admin? %>
+      <div id="event-edit-delete">
+        <%= link_to edit_event_path(@event), title: "Edit event", id: "event-edit" do %>
+          <i class="fas fa-edit"></i>
+        <% end %>
+        <%= link_to event_path(@event), title: "Delete event", method: :delete, id: "event-delete" do %>
+          <i class="fas fa-trash"></i>
+        <% end %>
+      </div>
+    <% end %>
+    <h1 id="event-title"><%= @event.title %></h1>
+    <p id="event-time-location"><i class="fas fa-map-marker-alt"></i> <%= @event.location %> <i class="fas fa-clock"></i> <%= @event.scheduled_at.strftime("%d %b %Y") %> at <%= @event.scheduled_at.strftime("%H:%M %p") %></p>
+    <p id="event-description"><%= @event.description %></p>
+  </div>
+</div>
 
-<p><%= @event.description %></p>
-
-<%= link_to "Edit Event", edit_event_path(@event) %>
-<%= link_to "Delete Event", event_path(@event), method: :delete %>
 
 <%= render "shared/footer" %>
