--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,29 @@
-<%= "#{@user.first_name} #{@user.last_name}"%>
-<%= @user.email %>
-<%= @user.phone_number %>
-<%= link_to "Edit", edit_user_path, class: "button-main"%>
 
+<div id="profile-page">
+    <div><h1>My profile</h1></div>
+    <div id="profile-container">
+        <div id="avatar-rectangle">
+            <% if @user.avatar.attached? %>
+                <%= cl_image_tag @user.avatar.key%>
+            <% else %>
+                No picture uploaded. 
+            <% end %>
+        </div>
+        <div id="profile-text">
+            <h1> <%= "#{@user.first_name} #{@user.last_name}"%> </h1>
+            <p><%= @user.email %> </p>
+            <p> <%= @user.phone_number %> </p>
+            <ul> 
+                <li><i class="fab fa-facebook"></i></li>
+                <li><i class="fab fa-instagram-square"></i></li>
+                <li><i class="fab fa-twitter-square"></i></li>
+                <li><i class="fab fa-linkedin"></i></li>
+                <li><i class="fab fa-spotify"></i></li>
+
+            </ul>
+        <%= link_to "Edit", edit_user_path, class:"button-edit" %> 
+        </div>
+    </div>
+</div>
 
 
