--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,9 +1,7 @@
 <div class="dashboard-container">
-  <div class="headline">
-    <h1>Dashboard</h1>
-  </div>
-  <% @created_ats.each do |day| %>
+  <div class="headline"><h1>Dashboard</h1></div>
     <div class="event-card-section">
+  <% @created_ats.each do |day| %>
     <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
       <% day[1].each do |day_event| %>
         <div class="event-card">
@@ -17,18 +15,33 @@
             <% end %>
           </div>
           <% if day_event.banner.attached? %>
-            <div class="event-card-body" style="background-image: url('<%= cl_image_path day_event.banner.key, crop: :fill %>')">
-            <% else %>
-              <div class="event-card-body" style="background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDV8fHBhdHRlcm4lMjBkYXJrfGVufDB8fDB8&auto=format&fit=crop&w=800&q=60)">
+            <div class="event-card-body" style="background-image: url('<%= cl_image_path day_event.banner.key, crop: :fit %>')">
+          <% else %>
+            <div class="event-card-body" style="background-image: url(https://images.unsplash.com/photo-1605478328994-f93e98217da7?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDV8fHBhdHRlcm4lMjBkYXJrfGVufDB8fDB8&auto=format&fit=crop&w=800&q=60)">
           <% end %>
             <p><i class="far fa-clock"></i> <%= day_event.scheduled_at.strftime("%l:%M %p") %></p>
             <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
             <p><i class="fas fa-info"></i> <%= day_event.description %></p>
           </div>
-        </div>
+          </div>
+        <% if @invitations_data.include?([day_event.id, "pending"]) %>
+          <div class="event-card-footer-symbols">
+            <%= link_to event_path(day_event.id), title: "Accept invitation", id: "accept-invitation" do %>
+              <i class="fas fa-check-circle"></i>
+            <% end %>
+            <%= link_to event_path(day_event.id), title: "Maybe joining", id: "maybe-invitation" do %>
+              <i class="fas fa-question-circle"></i>
+            <% end %>
+            <%= link_to event_path(day_event.id), title: "Decline invitation", id: "decline-invitation" do %>
+              <i class="fas fa-times-circle"></i>
+            <% end %>
+          </div>
+        <% else %>
+          <div class="event-card-footer-empty"></div>
+        <% end %>
+      <% end %>
     <% end %>
-    </div>
-  <% end %>
+  </div>
 </div>
 <%= render "shared/footer" %>
 
