added tilt.js file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,13 +24,13 @@
 <section id="learn-more">
     <div class="container">
         <div class="column">
-            <%= image_tag "homepage-image-1.jpg"  %>
+            <%= image_tag "homepage-image-1.jpg" , class: "tilt" %>
         </div>
         <div class="column">
-            <%= image_tag "homepage-image-2.jpg" %>
+            <%= image_tag "homepage-image-2.jpg", class: "tilt"%>
         </div>
         <div class="column">
-            <%= image_tag "homepage-image-3.jpg" %>
+            <%= image_tag "homepage-image-3.jpg", class: "tilt" %>
         </div>
     </div>
 
