--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar">
   <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "logo_host.it.svg" %>
+    <%= image_tag "logo_host.it.svg", class:"tilt" %>
   <% end %>
 </div>
