fixed navbar, added all links in dropdown, removed temp links from footer, added styling to navbar and user login/register

--- a/app/assets/stylesheets/events/_edit.scss
+++ b/app/assets/stylesheets/events/_edit.scss
@@ -9,7 +9,7 @@
 
 .form-container {
   background-color: #E7DDB4;
-  padding: 0 5%;
+  padding: 130px 5% 0;
   form {
   display: flex;
   flex-direction: column;
