--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -12,3 +12,11 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-card {
+  background-color: $white;
+  width: 60px;
+  height: 80px;
+  background-size: cover;
+  border: 1.5px solid black;
+}
