--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #E7DDB4;
-  padding: 0 5%;
+  padding: 130px 5% 0;
 
   .event-details {
     width: 100%;
