--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,13 @@
   </head>
 
   <body>
-    <%= render 'shared/navbar' %>
+    <% if current_page?(root_path) %>
+      <%#= render 'shared/home_navbar' %>
+      <%= render 'shared/navbar' %>
+    <% else %>
+      <%= render 'shared/navbar' %>
+    <% end %>
     <%= render 'shared/flashes' %>
-
     <%= yield %>
   </body>
 </html>
