--- a/app/assets/stylesheets/events/_edit.scss
+++ b/app/assets/stylesheets/events/_edit.scss
@@ -4,16 +4,16 @@
 }
 
 .datepicker {
-  background-color: white!important;
+  background-color: white !important;
 }
 
 .form-container {
-  background-color: #E7DDB4;
+  background-color: $beige;
   padding: 130px 5% 0;
   form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .form-inputs-container {
@@ -24,7 +24,7 @@
     margin: 80px 0;
     flex-direction: column;
     align-items: center;
-    
+
     .form-control {
       border-radius: 0;
       border: 1.5px solid black;
