--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,15 @@
     <% if current_page?(root_path) %>
       <%#= render 'shared/home_navbar' %>
       <%= render 'shared/navbar' %>
+      <%= yield %>
     <% else %>
       <%= render 'shared/navbar' %>
+      <div class="main-wraper">
+        <%= yield %>
+      </div>
     <% end %>
+    <%= render "shared/footer" %>
     <%= render 'shared/flashes' %>
-    <%= yield %>
+    
   </body>
 </html>
