--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $white;
-  padding: 130px 5% 0;
+  padding: 0 5% 0;
 
   .event-details {
     width: 100%;
