commit before merging

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,13 @@
 <div class= "footer">
-  
+    <div id ='beige-bar'>
+
+    </div id ='purple-bar'>
+
+    <div>
+    </div>
+
+    <div id ='black-bar'>
+    </div>
+
+
 </div>
