--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <%= @user.first_name %>
 
-<div class="container">
+<div id="edit-page">
   <h1>Edit offer</h1>
   <%= simple_form_for @user do |f| %>
     <%= f.input :first_name %>
