--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,10 @@
 <div class="dashboard-container">
-  <div class="headline"><h1>Dashboard</h1></div>
-    <div class="event-card-section">
-  <% @created_ats.each do |day| %>
-    <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
+  <div class="headline">
+    <h1>Dashboard</h1>
+  </div>
+  <div class="event-card-section">
+    <% @created_ats.each do |day| %>
+      <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
       <% day[1].each do |day_event| %>
         <div class="event-card">
           <div class="event-card-header"><p><%= link_to "#{day_event.title}", event_path(day_event.id) %></p>
@@ -23,22 +25,20 @@
             <p><i class="fas fa-map-marker-alt"></i> <%= day_event.location %></p>
             <p><i class="fas fa-info"></i> <%= day_event.description %></p>
           </div>
-          </div>
-        <% if @invitations_data.include?([day_event.id, "pending"]) %>
-          <div class="event-card-footer-symbols">
-            <%= link_to event_path(day_event.id), title: "Accept invitation", id: "accept-invitation" do %>
-              <i class="fas fa-check-circle"></i>
-            <% end %>
-            <%= link_to event_path(day_event.id), title: "Maybe joining", id: "maybe-invitation" do %>
-              <i class="fas fa-question-circle"></i>
-            <% end %>
-            <%= link_to event_path(day_event.id), title: "Decline invitation", id: "decline-invitation" do %>
-              <i class="fas fa-times-circle"></i>
-            <% end %>
-          </div>
-        <% else %>
-          <div class="event-card-footer-empty"></div>
-        <% end %>
+          <% if @invitations_data.include?([day_event.id, "pending"]) %>
+            <div class="event-card-footer-symbols">
+              <%= link_to event_path(day_event.id), title: "Accept invitation", id: "accept-invitation" do %>
+                <i class="fas fa-check-circle"></i>
+              <% end %>
+              <%= link_to event_path(day_event.id), title: "Maybe joining", id: "maybe-invitation" do %>
+                <i class="fas fa-question-circle"></i>
+              <% end %>
+              <%= link_to event_path(day_event.id), title: "Decline invitation", id: "decline-invitation" do %>
+                <i class="fas fa-times-circle"></i>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       <% end %>
     <% end %>
   </div>
