--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -1,11 +1,10 @@
 .headline {
   text-align: right;
-  margin-top: 80px;
   margin-bottom: 60px;
 }
 
 .dashboard-container {
-  padding: 40px;
+  padding: 0 40px 40px;
 }
 
 .date-box {
