--- a/app/assets/stylesheets/events/_edit.scss
+++ b/app/assets/stylesheets/events/_edit.scss
@@ -8,8 +8,7 @@
 }
 
 .form-container {
-  background-color: $beige;
-  padding: 130px 5% 0;
+  padding: 0 5% 0;
   form {
     display: flex;
     flex-direction: column;
@@ -17,7 +16,7 @@
   }
 
   .form-inputs-container {
-    background-color: $light-gray;
+    background-color: $beige;
     display: flex;
     width: 900px;
     padding: 48px;
