--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 5% 0;
+  padding: 0 5% 80px;
 
   .event-details {
     width: 100%;
     margin: 80px;
-    background-color: $light-gray;
+    background-color: $beige;
     padding: 48px;
     position: relative;
 
