--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,11 +14,11 @@
             <p><%= @user.email %> </p>
             <p> <%= @user.phone_number %> </p>
             <ul> 
-                <li><i class="fab fa-facebook"></i></li>
-                <li><i class="fab fa-instagram-square"></i></li>
-                <li><i class="fab fa-twitter-square"></i></li>
-                <li><i class="fab fa-linkedin"></i></li>
-                <li><i class="fab fa-spotify"></i></li>
+       <li><i id ="socials-fb" class="fab fa-facebook"></i></li>
+            <li><i id ="socials-in" class="fab fa-instagram-square"></i></li>
+            <li><i id ="socials-tw" class="fab fa-twitter-square"></i></li>
+            <li><i id ="socials-ln" class="fab fa-linkedin"></i></li>
+            <li><i id ="socials-sp" class="fab fa-spotify"></i></li>
 
             </ul>
         <%= link_to "Edit", edit_user_path, class:"button-edit" %> 
