--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -5,7 +5,6 @@
     border: white 1px solid;
   }
   #profile-page {
-    padding-top: 140px;
    width: 80%;
     margin: 0 auto;
     }
@@ -57,3 +56,27 @@
       color: white;
     }
 }
+
+p:hover { text-decoration: underline;}
+#socials-fb, #socials-in, #socials-sp, #socials-ln, #socials-tw { transition: all .2s ease-in-out; }
+
+#socials-fb:hover {
+    color: #3B5998;
+    transform: scale(1.2);
+  }
+  #socials-tw:hover {
+    color: #3d98a9;
+    transform: scale(1.2);
+  }
+  #socials-in:hover {
+    color: #9a55a3;
+    transform: scale(1.2);
+  }
+  #socials-sp:hover {
+    color: #65983b;
+    transform: scale(1.2);
+  }
+  #socials-ln:hover {
+    color: #eeeeee;
+    transform: scale(1.2);
+  }
