added bring list and playlist section

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,7 +30,7 @@
         USER AVATARS
       </div>
       <div class="guest-name">Guest name</div>
-      <a href="" class="list-button button-create">See list</a>
+      <a href="" class="list-button button-invite">See list</a>
     </div>
     <div class="location-map">
       MAP
@@ -42,4 +42,22 @@
       </div>
     </div>
   </div>
+
+  <div class="event-items-playlist">
+    <div class="bring-list">
+      <div class="items">
+
+      </div>
+      <div class="bring-form">
+          <input id="item-input" type="text" placeholder="Add what you will bring!">
+          <%= link_to do , class: "add-item" %>
+              <i class="far fa-plus-square"></i>
+          <% end %>
+      </div>
+    </div>
+    <div class="playlist">
+      I AM THE DJ!
+    </div>
+  </div>
+
 </div>
