basic geocoding setup

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,19 +1,22 @@
 .navbar-home {
-  float: left;
-  height: 0;
   position: absolute;
+  float: left;
   top: 0;
-  width: 150px;
   z-index: 30;
-
+  height: 120px;
+  width: 100%;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   img {
-    margin-top: 4px;
-    margin-left: 20px;
+    height: 100px;
+    margin-top: -25%;
   }
 }
 
 .navbar-hostit {
-  position: fixed;
+  position: absolute;
   float: left;
   top: 0;
   z-index: 30;
