--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-hostit ">
   <div class="nav-line">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "logo_host.it.svg" %>
+      <%= image_tag "logo_host.it.svg", class:"tilt" %>
     <% end %>
     <div class="nav-right">
       <% if user_signed_in? %>
