--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,12 @@
     padding-top: 200px;
 }
 
+#headers2 {
+  margin-left: 60px;
+  padding-top: 40px;
+  color: white;
+}
+
 h1 {
     font-size: 45px;
     font-weight: Bold;
@@ -13,6 +19,10 @@ h2 {
     font-size: 35px;
     font-weight: Medium;
     color: white;
+}
+
+p {
+  margin-right: 60px;
 }
 
 #header-buttons {
