--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,7 +33,9 @@
       <a href="" class="list-button button-create">See list</a>
     </div>
     <div class="location-map">
-      MAP
+      style="width: 100%; height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['pk.eyJ1IjoidmxhZHRka3YiLCJhIjoiY2toNHFmNzdkMGFreDJ3bnMzM2FvYmNtcyJ9.fBbotMMyEyeFfOce-jfyFA'] %>">
     </div>
     <div class="invite-modal">
       <div class="invite-content">
