--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -82,18 +82,18 @@
     .invite-modal {
       display: none; /* Hidden by default */
       position: fixed; /* Stay in place */
-      z-index: 1; /* Sit on top */ 
+      z-index: 1; /* Sit on top */
       left: 0;
       top: 0;
       width: 100%; /* Full width */
       height: 100%; /* Full height */
       overflow: auto; /* Enable scroll if needed */
-      background-color: rgb(0,0,0); /* Fallback color */
-      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      background-color: rgb(0, 0, 0); /* Fallback color */
+      background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
       justify-content: center;
       align-items: center;
     }
-    
+
     /* Modal Content */
     .invite-content {
       background-color: #fefefe;
@@ -133,6 +133,7 @@
     padding: 48px;
     width: 100%;
     display: flex;
+    margin-bottom: 80px;
 
     .bring-list {
       background-color: $black;
@@ -153,7 +154,7 @@
       .bring-form {
         display: flex;
         width: 100%;
-        #item-input  {
+        #item-input {
           border: none;
           height: 48px;
           width: 90%;
@@ -167,15 +168,16 @@
           justify-content: center;
           align-items: center;
           a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             width: 100%;
-            height: 100%;
-            font-size: 2.5rem;
+            font-size: 2rem;
             color: $black;
             &:hover {
               text-decoration: none;
             }
           }
-          
         }
       }
     }
@@ -191,6 +193,55 @@
       justify-content: center;
       color: $white;
       font-size: 3rem;
+    }
+  }
+
+  .event-chat {
+    background-color: $beige;
+    padding: 48px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .chat-box {
+      height: 500px;
+      width: 100%;
+      background-color: $white;
+      border: 1.5px solid black;
+      margin-bottom: 32px;
+    }
+    .chat-form {
+      display: flex;
+      width: 100%;
+      border: 1.5px solid black;
+      background-color: $white;
+      #chat-input {
+        background-color: $white;
+        font-size: 1.3rem;
+        width: 95%;
+        border: none;
+        border-radius: 0;
+        padding: 8px 16px;
+      }
+
+      .send-button {
+        background-color: $white;
+        width: 5%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        a {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          font-size: 1.7rem;
+          color: $black;
+          &:hover {
+            text-decoration: none;
+          }
+        }
+      }
     }
   }
 }
