--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,10 +33,10 @@
       <a href="" class="list-button button-invite">See list</a>
     </div>
     
-    <div class="location-map">
-      style="width: 40%; height: 600px;"
+    <div id="map"
+      style"width: 100%; height: 600px;"
       data-markers="<%= @marker.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
     </div>
 
     <div class="invite-modal">
