--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -96,12 +96,29 @@
 
     /* Modal Content */
     .invite-content {
-      background-color: #fefefe;
+      background-color: $beige;
       margin: auto;
-      padding: 20px;
+      padding: 40px;
       border: 1px solid #888;
-      width: 60%;
+      width: 30%;
       position: relative;
+      border: solid 1.5px black;
+
+      .invite-email-input {
+        form {
+          display: flex;
+        }
+        .invitation_receiver_email {
+          width: 90%;
+        }
+        .invite-button {
+          padding: 0;
+          height: 100%;
+          width: 10%;
+          border: none;
+          background-color: $white;
+        }
+      }
 
       #close-button {
         background-color: $beige;
