implemented mvp spotify

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,7 +46,6 @@
   <div class="event-items-playlist">
     <div class="bring-list">
       <div class="items">
-
       </div>
       <div class="bring-form">
           <input id="item-input" type="text" placeholder="Add what you will bring!">
@@ -58,7 +57,7 @@
       </div>
     </div>
     <div class="playlist">
-      I AM THE DJ!
+    <iframe src="https://open.spotify.com/embed/playlist/0K0RsJ0xxaTDZIKQ1vszY3" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
   </div>
 
@@ -72,6 +71,6 @@
                   <i class="far fa-paper-plane"></i>
               <% end %>
             </div>
-      </div>
+    </div>
   </div>
 </div>
