--- a/app/assets/stylesheets/events/_show.scss
+++ b/app/assets/stylesheets/events/_show.scss
@@ -115,6 +115,12 @@
       }
     }
   }
+  .playlist {
+    display: flex;
+    flex-grow: 1;
+    width:100%;
+    height:100%;
+    }
 
   .location-map {
     width: 100%;
