--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <div class="event-container">
   <% if @event.banner.attached? %>
-    <div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("<%= cl_image_path @event.banner.key %>")"> 
+    <div class="event-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @event.banner.key %>')"> 
   </div>
   <% else %>
     <div class="event-banner">
@@ -34,9 +34,9 @@
     </div>
     
     <div id="map"
-      style"width: 100%; height: 600px;"
+      style="width: 100%; height: 600px;"
       data-markers="<%= @marker.to_json %>"
-      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
+      data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"]%>">
     </div>
 
     <div class="invite-modal">
