--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -12,7 +12,7 @@
       <div class="date-box"> <%= day[0].strftime("%A, %b %d") %> </div>
       <% day[1].each do |day_event| %>
         <div class="event-card">
-          <div class="event-card-header"><p><%= link_to "#{day_event.title}", event_path(day_event.id) %></p>
+          <div class="event-card-header"><p><%= link_to "#{day_event.title}", event_path(day_event.id), class: 'link-to-text' %></p>
             <% if day_event.user == current_user %>
               <div class="event-card-status-circle-host"></div>
             <% elsif @invitations_data.include?([day_event.id, "accepted"]) %>
