added overlay to event cards in dashboard

--- a/app/assets/stylesheets/dashboard/_dashboard.scss
+++ b/app/assets/stylesheets/dashboard/_dashboard.scss
@@ -169,6 +169,7 @@
 }
 
 .event-card-body {
+  background-size: cover;
   padding: 10px 10px;
   height: 150px;
   text-align: center;
@@ -188,14 +189,14 @@
     font-size: 25px;
   }
   i:hover {
-    color: $magenta;
+    // color: $magenta;
     font-size: 30px;
   }
 }
 
-.overlay {
+.overlay-host {
   position: absolute;
-  background-color: rgba(254, 234, 52, 0.7);
+  background-color: rgba(171, 153, 251, 0.6);
   top: 0;
   left: 0;
   height: 100%;
@@ -205,7 +206,39 @@
   transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.event-card-body:hover .overlay {
+.overlay-guest {
+  position: absolute;
+  background-color: rgba(87, 136, 108, 0.6);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  padding: 15px;
+  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-invitation {
+  position: absolute;
+  background-color: rgba(221, 17, 85, 0.6);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  padding: 15px;
+  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.event-card-body:hover .overlay-host {
+  opacity: 1;
+}
+
+.event-card-body:hover .overlay-guest {
+  opacity: 1;
+}
+
+.event-card-body:hover .overlay-invitation {
   opacity: 1;
 }
 
